ingress-secure-app-cilium/online-boutique/base/gateway-expose/gatewaycreation.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: istio-ingress
  labels:
    istio.io/ingress-use-waypoint: "true"
spec:
  gatewayClassName: istio
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "*.cloudapps.lvnlab.internal"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: cloudapps-server-tls
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shoppingapp-route
  namespace: webapps
spec:
  parentRefs:
  - name: shared-gateway
    namespace: istio-ingress
  hostnames:
  - shoppingapp.cloudapps.lvnlab.internal
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-external
      port: 80
